--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react": "^18.2.47",
     "@types/react-dom": "^18.2.18",
     "@types/webpack-env": "^1.18.1",
+    "@vercel/analytics": "^1.1.2",
     "autoprefixer": "^10.4.12",
     "clsx": "^2.1.0",
     "next": "^14.1.0",
